<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Quiz</string>
    <string name="slide_1_desc">Choose a topic from subjects and start to test</string>

    <string name="slide_2_title">Score</string>
    <string name="slide_2_desc">Mark the correct option and score</string>

    <string name="slide_3_title">Improve and learn</string>
    <string name="slide_3_desc">Learn from mistakes and improve your score</string>

    <string name="slide_4_title">Reward</string>
    <string name="slide_4_desc">Mark your presence on the leader board</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="Login_message">Click on text field below to login</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login_button">Click to login</string>
    <string name="forgot_pwd">Click if you forgot your password</string>
    <string name="register_btn">Click to register</string>
    <string name="check_cred">Checking credentials</string>
    <string name="name_des">Your name</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="email_desc">your email id</string>
    <string name="performance">Past Scores</string>
    <string name="date_text">Date</string>
    <string name="category_text">Category</string>
    <string name="level_text">Level</string>
    <string name="score_text">Score(%)</string>
    <string name="score_list_desc">list showing your past scores and dates</string>
    <string name="forgot_password_desc">Enter registered email and click to get password resetting instructions</string>
    <string name="register_desc">enter details to register</string>
    <string name="score">Score</string>
    <string name="progress_desc">your progress</string>
    <string name="score_desc">your score</string>
    <string name="dummy_score">63%</string>
    <string name="question_review">Review Questions</string>
    <string name="choose_cat">Choose Category</string>
    <string name="image_desc_cat">Image showing category</string>
    <string name="dummy_cat">Wildlife</string>
    <string name="choose_cat_desc">Click to choose this Category</string>
    <string name="dummy_date">23-11-2017</string>
    <string name="dummy_cat1">Sports</string>
    <string name="dummy_level">difficult</string>
    <string name="dummy_score1">42%</string>
    <string name="choice">Select difficulty Level:</string>
    <string name="easy">Easy</string>
    <string name="moderate">Moderate</string>
    <string name="hard">Hard</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="result_text">RESULTS</string>
    <string name="dummy_option">Windows XP</string>
    <string name="dummy_option1">Windows 7</string>
    <string name="dummy_option2">Windows Vistas</string>
    <string name="dummy_option4">None of the above</string>
    <string name="option_desc">Option</string>
    <string name="profile_desc">Profile_desc</string>
    <string name="dummy_name_text">Capstone</string>
    <string name="dummy_email">capstone@gmail.com</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="loading">Loading..</string>
    <string name="leaderBoard_desc">LeaderBoard scores</string>
    <string name="leaderboard_desc">LeaderBoard</string>
    <string name="name_desc">Name</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="app_nme">TRIVIA_HUNTv1.0</string>
    <string name="view_comment">Please Contact: capstone@gmail.com to share your comments.</string>
    <string name="dev_notes">Developed Capstone</string>
    <string name="dummy_q">Q3)Whistler was the codename of this Microsoft Operating System.</string>
    <string name="qu">question</string>
    <string name="profile_menu">Profile</string>
    <string name="question_menu">Question</string>
    <string name="leaderboard_menu">LeaderBoard</string>
    <string name="about_menu">About</string>
    <string name="logout_menu">Logout</string>
    <string name="pos">POSITION</string>
    <string name="pos1">POSITION</string>
    <string name="select_id">SELECTID</string>
    <string name="categg">CATEGORY</string>
    <string name="package_name">com.capstoneproject</string>
    <string name="u1">users</string>
    <string name="email1">Enter email address!</string>
    <string name="email2">Enter Name!</string>
    <string name="pwd1">Enter password!</string>
    <string name="plen">Password too short, enter minimum 6 characters!</string>
    <string name="comp">createUserWithEmail:onComplete:</string>
    <string name="auth1">Authentication failed.</string>
    <string name="sscr">scores</string>
    <string name="resul">Result</string>
    <string name="lvl">LEVEL</string>
    <string name="catego">CATEGORY</string>
    <string name="sco">SCORE</string>
    <string name="error_msg">Error Occured,Sorry for inconvenience</string>
    <string name="scod">SCORE</string>
    <string name="datf">yyyy-MM-dd</string>
    <string name="widup">android.appwidget.action.APPWIDGET_UPDATE</string>
    <string name="null_s">score data is null!</string>
    <string name="change_s">score data is changed!</string>
    <string name="eroor">Failed to read score</string>
    <string name="sco1">scores</string>
    <string name="sco2">scores</string>
    <string name="val12">"values is "</string>
    <string name="fail_msg">Failed to read score</string>
    <string name="null_ss">score data is null!</string>
    <string name="data_s">score data is changed!</string>
    <string name="fail_s">Failed to read score</string>
    <string name="eamil">Enter email address!</string>
    <string name="pass">Enter password!</string>
    <string name="choose">Choose Category</string>
    <string name="pos12">POSITION</string>
    <string name="no_in">No internet Connection</string>
    <string name="clo">CLOSE</string>
    <string name="in1">No internet Connection</string>
    <string name="in2">No internet Connection</string>
    <string name="co1">CLOSE</string>
    <string name="co2">CLOSE</string>
    <string name="in4">No internet Connection</string>
    <string name="co3">CLOSE</string>
    <string name="in5">No internet Connection</string>
    <string name="co6">CLOSE</string>
    <string name="wigup">android.appwidget.action.APPWIDGET_UPDATE</string>
    <string name="us1">users</string>
    <string name="us2">users</string>
    <string name="uname">"User name: "</string>
    <string name="email12">", email "</string>
    <string name="fread">Failed to read value.</string>
    <string name="cat_1"><![CDATA[&category=12]]></string>
    <string name="select1">SELECTID</string>
    <string name="select12">SELECTID</string>
    <string name="easy1">easy</string>
    <string name="med">medium</string>
    <string name="di">difficult</string>
    <string name="caa">CATEGORY</string>
    <string name="caaa">CATEGORY</string>
    <string name="catr"><![CDATA[&category=]]></string>
    <string name="mlink">https://opentdb.com/api.php?amount=20</string>
    <string name="catr1"><![CDATA[&type=multiple]]></string>
    <string name="url">url</string>
    <string name="rec">receiver</string>
    <string name="req">requestId</string>
    <string name="res">result</string>
    <string name="reg_idd">Enter your registered email id</string>
    <string name="instrsent">We have sent you instructions to reset your password!</string>
    <string name="failed_send">Failed to send reset email!</string>

    <!-- Content Description-->

</resources>
