<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/date_text"
        android:focusable="true"
        android:nextFocusRight="@+id/name"
        android:text="@string/dummy_date" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/name_des"
        android:focusable="true"
        android:nextFocusLeft="@id/date"
        android:nextFocusRight="@+id/level"
        android:text="@string/dummy_cat1" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/level_text"
        android:focusable="true"
        android:nextFocusLeft="@id/name"
        android:nextFocusRight="@+id/score"
        android:text="@string/dummy_level" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/score_desc"
        android:focusable="true"
        android:nextFocusLeft="@id/level"
        android:text="@string/dummy_score1" />
</LinearLayout>