<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.ProfileActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/name_des"
        android:focusable="true"
        android:nextFocusDown="@+id/email"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/email_desc"
        android:focusable="true"
        android:nextFocusDown="@+id/label"
        android:nextFocusUp="@id/name"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:contentDescription="@string/performance"
        android:focusable="true"
        android:nextFocusUp="@id/email"
        android:text="@string/performance"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/label"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/labelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true">

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/date_text"
                android:focusable="true"
                android:nextFocusDown="@+id/listView"
                android:nextFocusRight="@+id/categ"
                android:text="@string/date_text" />

            <TextView
                android:id="@+id/categ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/category_text"
                android:focusable="true"
                android:nextFocusDown="@+id/listView"
                android:nextFocusLeft="@id/dates"
                android:nextFocusRight="@+id/levelss"
                android:text="@string/category_text" />

            <TextView
                android:id="@+id/levelss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/level_text"
                android:focusable="true"
                android:nextFocusDown="@+id/listView"
                android:nextFocusLeft="@id/categ"
                android:nextFocusRight="@+id/scr"
                android:text="@string/level_text" />

            <TextView
                android:id="@+id/scr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/score_text"
                android:focusable="true"
                android:nextFocusDown="@+id/listView"
                android:nextFocusLeft="@id/levelss"
                android:text="@string/score_text" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/label"
            android:contentDescription="@string/score_list_desc"
            android:focusable="true">

        </ListView>

    </LinearLayout>

</RelativeLayout>
