<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.capstoneproject.ui.ResultActivity"
    tools:showIn="@layout/activity_result">

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/score"
        android:focusable="true"
        android:gravity="center"
        android:nextFocusDown="@+id/review"
        android:text="@string/score"
        android:textColor="#F44336"
        android:textSize="40sp" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/score"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/progress_desc"
        android:foregroundGravity="center"
        android:textAlignment="center"
        app:cpb_background_progressbar_color="#FFCDD2"
        app:cpb_background_progressbar_width="4dp"
        app:cpb_progress="0"
        app:cpb_progressbar_color="#F44336"
        app:cpb_progressbar_width="10dp" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/score_desc"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/dummy_score"
        android:textColor="#F44336"
        android:textSize="64sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:padding="10dp">

        <Button
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="#F44336"
            android:contentDescription="@string/question_review"
            android:focusable="true"
            android:nextFocusRight="@+id/Choose"
            android:nextFocusUp="@id/score"
            android:padding="10dp"
            android:text="@string/question_review"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30dp"
            android:background="#F44336"
            android:contentDescription="@string/choose_cat"
            android:focusable="true"
            android:nextFocusLeft="@id/review"
            android:nextFocusUp="@id/score"
            android:padding="10dp"
            android:text="@string/choose_cat"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>
